--- a/sass/modules/_defaults.scss
+++ b/sass/modules/_defaults.scss
@@ -2,33 +2,30 @@
 :root {
   /* Color */
   --color-white: #ffffff;
-  --color-light-white: #eeeeee;
-  --color-dark-white: #bdbdbd;
-  --color-yellow: #FFAB24;
-  --color-green: #007F6E;
-  --color-pink: #FF695F;
-  --color-navy: #002A4C;
-  --color-beige: #F6E1CA;
-  --color-dark-gray: #4d4d4d;
-  --color-gray: #616161;
-  --color-light-gray: #7c7979;
+  --color-light-white: #F4F4F4;
+  --color-dark-white: #CCCCCC;
+  --color-red: #A14631;
+  --color-dark-red: #AB7D72;
+  --color-green: #00C90A;
+  --color-yellow: #E3B100;
   --color-black: #000000;
 
   /* Font size */
-  --font-super-large: 30px;
-  --font-large: 26px;
-  --font-medium: 22px;
-  --font-regular: 16px;
+  --font-super-large: 35px;
+  --font-large: 30px;
+  --font-medium: 25px;
+  --font-regular: 20px;
+  --font-regular-small: 15px;
   --font-small: 12px;
   --font-micro: 11px;
 
   /* Font weight */
+  --weight-black: 900;
   --weight-bold: 700;
-  // --weight-semi-bold: 600;
-  // --weight-medium: 500;
+  --weight-medium: 500;
   --weight-regular: 400;
-  // --weight-light: 300;
-  // --weight-extra-light: 200;
+  --weight-light: 300;
+  --weight-thin: 100;
 
   /* Size */
 
@@ -45,48 +42,51 @@
 }
 
 body {
-  font-family: "novecento-sans-wide", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   margin: 0;
 }
 
 a {
   text-decoration: none;
-  color: var(--color-navy);
   cursor: pointer;
 }
 
 ul {
   list-style: none;
-  padding-left: 0;
-  // text-align: center;
 }
 
 li {
   list-style: none;
 }
 
-
-
 .hidden {
   display: none;
 }
 
 
-
-
-
-
-
 /* Typography */
 
-// h2 {
-  
-// }
+h2 {
+  font-size: var(--font-super-large);
+  font-weight: var(--font-bold);
+}
 
-// h3 {
-  
-// }
+h3 {
+  font-size: var(--font-medium);
+  font-weight: var(--font-bold);
+}
 
-// p {
+h4 {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-regular);
+}
 
-// }
+h5 {
+  font-size: var(--font-regular);
+  font-weight: var(--weight-bold);
+}
+
+p {
+  font-size: var(--font-regular-small);
+  font-weight: var(--weight-regular);
+}
