--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,22 +15,26 @@
   </head>
   <body>
     <h1 class="hidden">Welcome to BARO LANDING!</h1>
-    <nav id="navbar">
-      <div id="navbar__logo">
-      </div>
-      <ul id="navbar__menu" class="disNo">
-        <li class="navbar__menu__item"><a href="/"><h2>Main</h2></a></li>
-        <li class="navbar__menu__item"><a href="/about"><h2>about</h2></a></li>
-        <li class="navbar__menu__item"><a href="/why"><h2>Why</h2></a></li>
-        <li class="navbar__menu__item"><a href="/introduce"><h2>introduce</h2></a></li>
-        <li class="navbar__menu__item"><a href="/book"><h2>book</h2></a></li>
-        <li class="navbar__menu__item"><a href="/contract"><h2>contract</h2></a></li>
-      </ul>
-    </nav>
-
-
-    {{{ body }}}
-
+    <div id="section">
+      <nav id="navbar">
+        <div id="navbar__line"></div>
+        <ul id="navbar__menu">
+          <li class="navbar__menu__item"><a href="/about"><h6>정착 랜딩 알아보기</h6></a></li>
+          <li class="navbar__menu__item"><a href="/why"><h6>Why BARO?</h6></a></li>
+          <li class="navbar__menu__item"><a href="/introduce"><h6>회사소개</h6></a></li>
+          <li class="navbar__menu__item"><a href="/contract"><h6>신청서 양식</h6></a></li>
+          <li class="navbar__menu__item"><h6>계약서 양식</h6></li>
+          <li class="navbar__menu__item"><a href="/book"><h6>문의하기</h6></a></li>
+          <li><a href=""><img src="/images/" alt="카카오톡 로고"></a></li>
+          <li><a href=""><img src="/images/" alt="인스타그램 로고"></a></li>
+        </ul>
+      </nav>
+      {{{ body }}}
+      <footer id="footer">
+        <p>© BAROlandingservice. All rights reserved.</p>
+      </footer>
+    </div>
+  
     
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
