--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -2,7 +2,7 @@
   width: 1300px;
   height: 960px;
   margin: auto;
-  padding: 60px 70px;
+  padding: 60px 60px 0 60px;
 }
 
 #navbar {
@@ -25,7 +25,7 @@
   width: 164px;
   height: 46px;
   left: -20px;
-  top: -880px;
+  top: -720px;
 }
 
 #navbar h6 {
