--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -1,31 +1,30 @@
-#section {
-  width: 1300px;
-  height: 960px;
-  margin: auto;
-  padding: 60px 60px 0 60px;
-}
-
 #navbar {
   float: right;
   width: 200px;
 }
 
 #navbar__line {
-  position: relative;
+  position: absolute;
   width: 0px;
   height: 100vh;
-  top: -76px;
-  bottom: 0px;
+  left: 1248.5px;
+  top: -6px;
 
   border: 2px solid var(--color-red);
 }
 
 #navbar__menu {
-  position: relative;
+  position: absolute;
   width: 164px;
   height: 46px;
-  left: -20px;
-  top: -720px;
+  left: 1224px;
+  top: 80px;
+}
+
+#navbar__menu img {
+  width: 60px;
+  height: 60px;
+  margin-left: 18px;
 }
 
 #navbar h6 {
@@ -43,3 +42,4 @@
 #navbar li {
   margin-bottom: 30px;
 }
+
