BUILT: ABOUT PAGE

--- a/sass/modules/_defaults.scss
+++ b/sass/modules/_defaults.scss
@@ -5,6 +5,7 @@
   --color-light-white: #F4F4F4;
   --color-dark-white: #CCCCCC;
   --color-red: #A14631;
+  --color-light-red: #AB7D72;
   --color-dark-red: #AB7D72;
   --color-green: #00C90A;
   --color-yellow: #E3B100;
