--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -9,3 +9,9 @@
   color: var(--color-black);
   text-align: center;
 }
+
+#footer__about {
+  margin: auto;
+  text-align: center;
+  padding: 50px;
+}
