BUILT: WHY PAGE

--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -1,16 +1,16 @@
-#footer {
+#footer__landing {
   position: absolute;
   height: 50px;
   left: 560px;
   top: 700px;
 }
 
-#footer p {
+#footer__landing p {
   color: var(--color-black);
   text-align: center;
 }
 
-#footer__about {
+#footer {
   margin: auto;
   text-align: center;
   padding: 50px;
