BUILT: SERVICE PAGE

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 @import "./modules/_about.scss";
 @import "./modules/_why.scss";
 @import "./modules/_introduce.scss";
-@import "./modules/_book.scss";
-@import "./modules/_contract.scss";
+@import "./modules/_service.scss";
+@import "./modules/_contact.scss";
 
 @import "./modules/_queries.scss";
