REPLACE: ALL IMAGES

--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -97,11 +97,11 @@
   margin-bottom: 40px;
 }
 
-// .baro__poster img {
-//   width: 660px;
-//   height: 400px;
-//   background-color: var(--color-light-red);
-// }
+.baro__poster img {
+  width: 660px;
+  // height: 400px;
+  // background-color: var(--color-light-red);
+}
 
 
 .contactBtn.btnAnimation {
