--- a/sass/modules/_introduce.scss
+++ b/sass/modules/_introduce.scss
@@ -44,9 +44,9 @@
 
 .lim__container img {
   width: 350px;
-  height: 300px;
-  background-color: var(--color-light-red);
-  border-radius: 800px;
+  // height: 300px;
+  // background-color: var(--color-light-red);
+  // border-radius: 800px;
   margin-bottom: 40px;
 }
 
@@ -66,9 +66,9 @@
 
 .park__container img {
   width: 350px;
-  height: 300px;
-  background-color: var(--color-light-red);
-  border-radius: 800px;
+  // height: 300px;
+  // background-color: var(--color-light-red);
+  // border-radius: 800px;
   margin-bottom: 40px;
 }
 
