MEDIA QUERY: WHY PAGE

--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -126,6 +126,10 @@
   margin-bottom: 20px;
 }
 
+.after__tablet {
+  display: none;
+}
+
 .after__container__up {
   display: flex;
   flex-direction: row;
