COMPLETE: TABLET VERSION

--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -46,6 +46,10 @@
   height: 40px;
 }
 
+.contact__box__tablet {
+  display: none;
+}
+
 .contact__box__second {
   display: flex;
   flex-direction: column;
