--- a/sass/modules/_introduce.scss
+++ b/sass/modules/_introduce.scss
@@ -56,6 +56,7 @@
 
 .lim__container h4 {
   line-height: 50px;
+  width: 850px;
 }
 
 // Park Container
@@ -78,6 +79,7 @@
 
 .park__container h4 {
   line-height: 50px;
+  width: 850px;
 }
 
 
