COMPLETE: MEDIA QUERY MOBILE VERSION

--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -49,6 +49,7 @@
 
 .service__before p {
   margin: 20px 0;
+  line-height: 25px;
 }
 
 .service__before__up {
@@ -64,6 +65,7 @@
   border-radius: 33px;
   padding: 30px 40px;
   margin-bottom: 20px;
+  line-height: 30px;
 }
 
 .before__container__up {
@@ -95,6 +97,7 @@
 
 .service__after p {
   margin: 20px 0;
+  line-height: 25px;
 }
 
 .service__after__box {
@@ -133,6 +136,7 @@
 .after__container__up {
   display: flex;
   flex-direction: row;
+  line-height: 30px;
 }
 
 .after__container__up i {
