--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -12,6 +12,14 @@
   line-height: 30px;
 }
 
+.mobileDisNo {
+  display: block;
+}
+
+.mobileDisYes {
+  display: none;
+}
+
 #contact p {
   line-height: 30px;
 }
