--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -38,6 +38,11 @@
   margin-bottom: 25px;
 }
 
+.contact__container input.missing-field {
+  border: 2px solid var(--color-red);
+  opacity: 0.5;
+}
+
 .contact__box__first {
   display: flex;
   flex-direction: row;
@@ -119,4 +124,9 @@
 .contactBtn.btnAnimation {
   background-color: var(--color-black);
   transition: all 0.3s ease-in;
+}
+
+.missing-field__text {
+  color: var(--color-red);
+  text-transform: uppercase;
 }
