MODIFIED: LANDING PAGE

--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -38,14 +38,14 @@
   margin-bottom: 25px;
 }
 
-.contact__container input:invalid {
-  border-color: #900;
-  background-color: #fdd;
-}
+// .contact__container input:invalid {
+//   border-color: #900;
+//   background-color: #fdd;
+// }
 
-.contact__container input:focus:invalid {
-  outline: none;
-}
+// .contact__container input:focus:invalid {
+//   outline: none;
+// }
 
 .contact__box__first {
   display: flex;
