--- a/sass/modules/_main.scss
+++ b/sass/modules/_main.scss
@@ -69,6 +69,8 @@
     width: 50px;
     height: 50px;
     background-color: var(--color-dark-white);
+    position: relative;
+    top: 3px;
   }
 
   .main__naver__logo small {
