--- a/sass/modules/_why.scss
+++ b/sass/modules/_why.scss
@@ -52,10 +52,12 @@
 .review__container__items h5 {
   margin-bottom: 20px;
   line-height: 30px;
+  color: var(--color-white);
 }
 
 .review__container__items p {
   line-height: 40px;
+  color: var(--color-white);
 }
 
 // Advantages
