--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -36,6 +36,12 @@
 .contact__container input {
   border: 1px solid var(--color-dark-white);
   margin-bottom: 25px;
+  outline: 0;
+}
+
+
+.contact__container input:focus {
+  border: 2px solid var(--color-red) !important;
 }
 
 // .contact__container input:invalid {
