--- a/sass/modules/_main.scss
+++ b/sass/modules/_main.scss
@@ -1,6 +1,7 @@
 /* Main Page */
   #main h2 {
     // margin: 130px 0 100px 0;
+    width: 600px;
     position: absolute;
     height: 43px;
     left: 171px;
